Trying to add draggable point

--- a/src/main/webapp/welcome.xhtml
+++ b/src/main/webapp/welcome.xhtml
@@ -31,8 +31,8 @@ and open the template in the editor.
             <!--h:outputScript library="js" name="canvas.js"/-->
             <!--h:outputScript library="js" name="sphere.js"/-->
             <!--h:outputScript library="js" name="helloworld.js"/-->
-            <h:outputScript library="js" name="webgl_interactive_draggablecubes.js"/>
-            <!--h:outputScript library="js" name="canvasSphere.js"/-->
+            <!--h:outputScript library="js" name="interactive_draggablecubes.js"/-->
+            <h:outputScript library="js" name="canvasSphere.js"/>
             
             <!--h5:canvas id="exampleCanvas" 
                        width="400px" 
