Draggable cube added

--- a/src/main/webapp/welcome.xhtml
+++ b/src/main/webapp/welcome.xhtml
@@ -17,7 +17,7 @@ and open the template in the editor.
                 canvas {width: 80%; height: 80%; background: lightgray;}
             </style-->
         </h:head>
-        <h:body style="background: #fefeef">
+        <h:body style="background: #B0C4DE">
             <!--h:outputScript library="js" name="jquery-1.9.1.min.js"/-->   
             <!--h:outputScript library="js" name="Three.js"/-->
             <!--h:outputScript library="js" name="three.js"/-->
