Random cubes added & Point of light removed & creating horizontal grid

--- a/src/main/webapp/welcome.xhtml
+++ b/src/main/webapp/welcome.xhtml
@@ -32,7 +32,8 @@ and open the template in the editor.
             <!--h:outputScript library="js" name="sphere.js"/-->
             <!--h:outputScript library="js" name="helloworld.js"/-->
             <!--h:outputScript library="js" name="interactive_draggablecubes.js"/-->
-            <h:outputScript library="js" name="canvasSphere.js"/>
+            <!--h:outputScript library="js" name="canvasSphere.js"/-->
+            <h:outputScript library="js" name="spherecubes.js"/>
             
             <!--h5:canvas id="exampleCanvas" 
                        width="400px" 
