--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -26,7 +26,7 @@
                 </rich:panel>   
             </rich:graphValidator>
         </h:form-->                       
-        <rich:popupPanel id="popup" modal="true" resizeable="true">
+        <rich:popupPanel id="popup" modal="true" resizeable="true" style="background-color: #B0C4DE;">
             <f:facet name="header">
                 <h:outputText value="ABACUS Login" />
             </f:facet>
