--- a/src/main/webapp/main.xhtml
+++ b/src/main/webapp/main.xhtml
@@ -19,10 +19,10 @@
             </f:facet>
             <f:facet name="controls">
                 <h:outputLink value="#" onclick="#{rich:component('resultPopup')}.hide(); return false;">
-                    X
+                    X                    
                 </h:outputLink>
             </f:facet>
-            <h:graphicImage library="img" name="joke.jpg"/>
+            <h:graphicImage library="img" name="koalaJoke.jpg" />
         </rich:popupPanel>
         <rich:tabPanel switchType="client" style="min-height: 75%" >
             <rich:tab header="Overview">        
@@ -117,9 +117,15 @@
                             <f:selectItem itemValue="0" itemLabel="Local" />
                             <f:selectItem itemValue="1" itemLabel="Remote" />
                         </rich:select>
-                        <h:outputText id="sphereData" value="Spheres data: " />
-                        <h:outputText id="executionTime" value="Execution time: " />                        
-                        <h:commandButton value="Create" type="button" >
+                        <h:panelGrid columns="2" id="resultInfoPanel">
+                            <h:outputText id="sphereData" value="Spheres data: " />
+                            <h:outputText value="#{graphBean.printFocuses()}" rendered="#{not graphBean.isEmpty()}" />
+                            <h:outputText value=" " rendered="#{graphBean.isEmpty()}" />
+                            <h:outputText id="executionTime" value="Execution time: " />                            
+                            <h:outputText value="#{graphBean.executionTime}" rendered="#{not graphBean.execTimeIsZero()}" />
+                            <h:outputText value=" " rendered="#{graphBean.execTimeIsZero()}" />
+                        </h:panelGrid>
+                        <h:commandButton value="Create" type="button" actionListener="#{graphBean.createImage}" >
                             <rich:componentControl target="resultPopup" operation="show" />
                         </h:commandButton>                       
                     </h:panelGrid>
