JS Popup created & implementing I/O HTML5

--- a/src/main/webapp/main.xhtml
+++ b/src/main/webapp/main.xhtml
@@ -28,7 +28,10 @@
         <rich:popupPanel id="JSPopup" 
                          modal="false"
                          autosized="true" 
-                         moveable="true"> 
+                         moveable="true"
+                         onshow="init('#{nBodysBean.numParticles}', '#{nBodysBean.numSteps}')"
+                         left="0px"
+                         top="0px"> 
             <f:facet name="header">
                 <h:outputText value="Result" />
             </f:facet>
@@ -41,7 +44,8 @@
             <!-- JavaScript -->
             <div id="nBodyDiv">
                 <h:outputScript library="js" name="three.min.js"/>
-                <h:outputScript library="js" name="rotatingCube.js" />
+                <!--h:outputScript library="js" name="rotatingCube.js" /-->
+                <h:outputScript library="js" name="nbody.js" />
             </div>
             <!--div-->
                 <!--ui:insert id="JSResult"-->                    
@@ -198,7 +202,7 @@
             </rich:tab>        
                                     
             <rich:tab header="NBody">
-                <h:form id="form">
+                <h:form id="formnbody">
                     <rich:panel style="max-width: 40%;">
                         <f:facet name="header">
                             <!--h:panelGroup-->
@@ -212,15 +216,15 @@
                         </f:facet>
                         <h:panelGrid columns="3">
                             <h:outputText value="nParticles: " />
-                            <h:inputText value="#{nBodysBean.nParticles}" id="nParticles">
+                            <h:inputText value="#{nBodysBean.numParticles}" id="numParticles">
                                 <rich:validator />
                             </h:inputText>
-                            <rich:message for="nParticles" />
+                            <rich:message for="numParticles" />
                             <h:outputText value="nSteps: " />
-                            <h:inputText value="#{nBodysBean.nSteps}" id="nSteps">
+                            <h:inputText value="#{nBodysBean.numSteps}" id="numSteps">
                                 <rich:validator />
                             </h:inputText>
-                            <rich:message for="nSteps" />
+                            <rich:message for="numSteps" />
                             <h:outputText value="dt: " />
                             <h:inputText value="#{nBodysBean.dt}" id="dt">
                                 <rich:validator />
@@ -236,7 +240,7 @@
                             <!--a4j:commandButton value="Submit"  
                                                action="{nBodysBean.launchCalculation}" 
                                                render="calculationPanel"/-->                                                                                        
-                            <!--h:form id="form"-->
+                            <!--h:form id="progressForm"-->
                                 <rich:progressBar mode="ajax" 
                                                   value="#{nBodysBean.currentValue}" 
                                                   interval="400" 
@@ -248,55 +252,70 @@
                                         <h:panelGroup>
                                             <a4j:commandButton action="#{nBodysBean.startProcess}" 
                                                                value="Submit" 
-                                                               execute="@form"
                                                                render="pb" 
                                                                rendered="#{nBodysBean.buttonRendered}" 
-                                                               style="margin: 9px 0px 5px;" />
-                                        </h:panelGroup>
+                                                               style="margin: 9px 0px 5px;" />                                            
+                                            <br />                                        
+                                            <rich:dataTable var="record" 
+                                                            value="Value" 
+                                                            rendered="#{nBodysBean.showCalc}">
+                                                <f:facet name="header">
+                                                    <rich:columnGroup>
+                                                        <rich:column>
+                                                            <h:outputText value=" " />
+                                                        </rich:column>
+                                                        <rich:column>
+                                                            <h:outputText value="Elapsed time" />
+                                                        </rich:column>     
+                                                        <rich:column>
+                                                            <h:outputText value="Result" />
+                                                        </rich:column>
+                                                    </rich:columnGroup>
+                                                </f:facet>
+
+                                                <rich:columnGroup rendered="#{nBodysBean.showXeon}">
+                                                    <rich:column>
+                                                        <h:outputText value="Xeon Phi" />
+                                                    </rich:column>
+                                                    <rich:column>
+                                                        <h:outputText value="6" />
+                                                    </rich:column> 
+                                                    <rich:column>
+                                                        <a4j:commandButton value="Show"  
+                                                                           action="#{nBodysBean.createJS()}"
+                                                                           oncomplete="#{rich:component('JSPopup')}.show()"
+                                                                           render="JSPopup"/> 
+                                                    </rich:column>
+                                                </rich:columnGroup>
+                                                <rich:columnGroup rendered="#{nBodysBean.showHost}">
+                                                    <rich:column>
+                                                        <h:outputText value="Host" />
+                                                    </rich:column>
+                                                    <rich:column>
+                                                        <h:outputText value="10" />
+                                                    </rich:column>     
+                                                    <rich:column>
+                                                        <a4j:commandButton value="Show" 
+                                                                           action="#{nBodysBean.createJS()}"
+                                                                           oncomplete="#{rich:component('JSPopup')}.show()"
+                                                                           render="JSPopup"/> 
+                                                    </rich:column>
+                                                </rich:columnGroup>                                
+                                            </rich:dataTable>
+                                        </h:panelGroup>                                        
                                     </f:facet>
-                                    <f:facet name="finish">
-                                        <h:panelGroup>                                            
-                                            <!--a4j:commandButton action="{nBodysBean.startProcess}" 
+                                    <!--f:facet name="finish">
+                                        <h:panelGroup>        
+                                            <h:outputText value="Done"/>
+                                            <a4j:commandButton action="{nBodysBean.startProcess}" 
                                                                value="Submit" 
                                                                execute="@form"
                                                                render="pb" 
                                                                rendered="{nBodysBean.buttonRendered}" 
-                                                               style="margin: 9px 0px 5px;" /-->
-                                        </h:panelGroup>                                        
-                                        <br />                                        
-                                        <rich:dataTable var="record" 
-                                                        value="Value" 
-                                                        rendered="#{nBodysBean.showCalc}">
-                                            <f:facet name="header">
-                                                <rich:columnGroup>
-                                                    <rich:column>
-                                                        <h:outputText value=" " />
-                                                    </rich:column>
-                                                    <rich:column>
-                                                        <h:outputText value="Elapsed time" />
-                                                    </rich:column>                                        
-                                                </rich:columnGroup>
-                                            </f:facet>
-
-                                            <rich:columnGroup rendered="#{nBodysBean.showXeon}">
-                                                <rich:column>
-                                                    <h:outputText value="Xeon Phi" />
-                                                </rich:column>
-                                                <rich:column>
-                                                    <h:outputText value="6" />
-                                                </rich:column>                                                                            
-                                            </rich:columnGroup>
-                                            <rich:columnGroup rendered="#{nBodysBean.showHost}">
-                                                <rich:column>
-                                                    <h:outputText value="Host" />
-                                                </rich:column>
-                                                <rich:column>
-                                                    <h:outputText value="10" />
-                                                </rich:column>                                                                            
-                                            </rich:columnGroup>                                
-                                        </rich:dataTable>   
-                                    </f:facet>
-                                    <h:outputText value="Proccessing..." />
+                                                               style="margin: 9px 0px 5px;" />                                            
+                                        </h:panelGroup>                                                                                  
+                                    </f:facet-->
+                                    <h:outputText value="Processing..." />
                                     <!-- Update the progress for each AJAX update -->
                                     <a4j:ajax event="begin" listener="#{nBodysBean.increment}" />
                                 </rich:progressBar>                            
