Registration, Unregistration and Logout for Users + MDA Encryption for passwords

--- a/src/main/webapp/main.xhtml
+++ b/src/main/webapp/main.xhtml
@@ -59,7 +59,15 @@
             <rich:tab header="Overview">        
                 <h:outputText id="overviewDate" value="Date: #{overviewBean.date}"
                               style="font-size:16px; font-weight: bold"/> 
-                
+                <br />
+                <h:outputLink value="logout.xhtml">
+                    Logout
+                </h:outputLink> 
+                <br />
+                <h:outputLink value="unregister.xhtml">
+                    Unregister
+                </h:outputLink> 
+                <br />
                 <p>RichFaces is a component library for JSF and an advanced framework for
                     easily integrating AJAX capabilities into business applications.</p>
                 <ul>
