--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -36,14 +36,22 @@
                     X
                 </h:outputLink>
             </f:facet-->
-            <h:form>
+            <h:form id="loginForm">
                 <rich:messages for="gv" />
                 <rich:messages globalOnly="true" />
                 <h:panelGrid columns="2">
                     <h:outputText value="Username: "/>
                     <h:inputText value="#{userBean.username}" id="userText" autocomplete="off" /> 
                     <h:outputText value="Password:" />
-                    <h:inputSecret value="#{userBean.password}" id="passText" />
+                    <h:inputSecret value="#{userBean.password}" id="passText" />                    
+                    <h:selectBooleanCheckbox value="#{userBean.ldapAuthentication}">
+                        <a4j:ajax execute="@this" event="change" listener="#{userBean.updateForm}" render="groupText,groupInput"/>
+                    </h:selectBooleanCheckbox>
+                    <h:outputText value="LDAP Authentication" />
+                     
+                    <h:outputText value="Group: " rendered="#{userBean.ldapAuthentication}" id="groupText" />
+                    <h:inputText value="#{userBean.group}" id="groupInput" rendered="#{userBean.ldapAuthentication}" /> 
+                                        
                     <a4j:commandButton value="Log In" action="#{userBean.login}" />
                     <h:outputLink value="registration.xhtml">
                         New User
