--- a/src/main/webapp/registration.xhtml
+++ b/src/main/webapp/registration.xhtml
@@ -9,7 +9,7 @@
 <f:view>
     <h:head>
         <title>ABACUS Registration</title>
-        <h:outputStylesheet library="css" name="main.css" />
+        <h:outputStylesheet library="css" name="login.css" />
     </h:head>
     <!--h:body>   
         <h:form>
