New DB structure & creating roles management

--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -66,11 +66,8 @@
                                          
                     <a4j:commandButton value="Log In" action="#{userBean.login}" />
                     <h:outputText value=" " />
-                    <h:outputLink value="registration.xhtml">
-                        New User
-                    </h:outputLink>
-                </h:panelGrid>
-                
+                    <!--h:outputLink value="registration.xhtml">New User</h:outputLink-->
+                </h:panelGrid>                
             </h:form>
         </rich:popupPanel>
     </h:body>
